[package]
name = "mc-image-helper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive", "cargo"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
modrinth-api = "2.7.1"
reqwest = { version = "0.12.12", features = ["stream"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full", "macros"] }
